Fix contetin section title postion on tablet

--- a/source/sass/components/content-section.scss
+++ b/source/sass/components/content-section.scss
@@ -22,8 +22,7 @@
 }
 
 .content-section__title {
-  height: 54px;
-  margin-top: -34px;
+  margin-top: -25px;
   padding: 0 20px;
   font-size: 24px;
   background-color: #ffffff;
@@ -39,6 +38,7 @@
   }
 
   .content-section__title {
+    margin-top: -34px;
     font-size: 36px;
   }
 
@@ -62,6 +62,7 @@
   }
 
   .content-section__title {
+    height: 54px;
     margin-left: -40px;
     padding: 0 40px;
     font-size: 36px;
